# tscs-labs-rust

./: .gitignore  README.md
MyOldScalaSolutions/lab01/: BinaryExpression.scala  NumericExpression.scala
MyOldScalaSolutions/lab01/.bsp/: sbt.json
MyOldScalaSolutions/lab01/lab01/: build.sbt
MyOldScalaSolutions/lab01/lab01/Christian_Benedict_Smit_Lab01/: BinaryExpression.scala  NumericExpression.scala
MyOldScalaSolutions/lab01/lab01/project/: plugins.sbt
MyOldScalaSolutions/lab02/: build.sbt
MyOldScalaSolutions/lab02/src/main/scala/de/tu_dortmund/cs/sse/tscs/: TypeInformation.scala  Typecheck.scala  Value.scala
MyOldScalaSolutions/lab03/: build.sbt
MyOldScalaSolutions/lab03/src/main/scala/de/tu_dortmund/cs/sse/tscs/: TypeInformation.scala  Typecheck.scala
MyOldScalaSolutions/lab03typeInference/project/: plugins.sbt
MyOldScalaSolutions/lab04/: build.sbt
MyOldScalaSolutions/lab04/.bsp/: sbt.json
MyOldScalaSolutions/lab04/project/: plugins.sbt
MyOldScalaSolutions/lab05/: build.sbt
MyOldScalaSolutions/lab05/project/: plugins.sbt
lab01/: Cargo.toml
lab01/any_eq/: Cargo.toml
lab01/any_eq/src/: lib.rs
lab01/any_eq_derive/: Cargo.toml
lab01/any_eq_derive/src/: any_eq.rs  lib.rs  partial_eq_any_eq.rs
lab01/clone_dyn/: Cargo.toml
lab01/clone_dyn/src/: impl_clone_dyn.rs  lib.rs  make_clonable.rs
lab01/expr_eq_derive/: Cargo.toml
lab01/expr_eq_derive/src/: lib.rs
lab01/src/: lib.rs
lab01/src/expressions/: binary_expressions.rs  mod.rs  numeric_expressions.rs
lab01/src/parsers/: binary_expression.rs  mod.rs
(+119 files in other folders)
