[package]
name = "lab01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
any_eq_derive = { path = "./any_eq_derive" }
any_eq = { path = "./any_eq" }
clone_dyn = { path = "./clone_dyn" }

[dev-dependencies]
cargo-watch = "8.4.0"
